# OpenGL-Learning

./: CMakeLists.txt  LICENSE  README.md
dependencies/GLAD/: CMakeLists.txt
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
engines/First OGL Engine/: EngineUtils.hpp  OGL_E1.hpp  OGL_E1_v.0.1.hpp
engines/First OGL Engine/Utils/: EngineTypes.hpp  GameCamera.hpp  keyboardInputCallback.hpp  mouseInputCallback.hpp  windowResizeCallback.hpp
engines/First OGL Engine/include/: Bloom.hpp  ColoredShapesRenderer.hpp  CubemapRenderer.hpp  InstancesRenderer.hpp  LevelLoader.hpp  LevelSaver.hpp  LightSourcesDebugRenderer.hpp  MirrorRenderer.hpp  NormalRenderer.hpp  OGL_E1.hpp  PostprocessingData.hpp  Scene.hpp  ShadowCubemapRenderer.hpp  ShadowMapRenderer.hpp  Skybox.hpp  SkyboxRenderer.hpp  System.hpp  TransparentRenderer.hpp
engines/First OGL Engine/include/GUI/: BasicWindow.hpp  CursorPicker.hpp  EnvironmentControlWindow.hpp  GUIRenderer.hpp  MainWindow.hpp  ObjectTransformWindow.hpp  PostprocessingWindow.hpp  WindowsTypes.hpp
engines/First OGL Engine/include/Utils/: Delegate.hpp  Delegates.hpp  EngineTypes.hpp  Events.hpp  UtilsLibrary.hpp
engines/First OGL Engine/src/: Bloom.cpp  ColoredShapesRenderer.cpp  CubemapRenderer.cpp  InstancesRenderer.cpp  LevelLoader.cpp  LevelSaver.cpp  LightSourcesDebugRenderer.cpp  MirrorRenderer.cpp  NormalRenderer.cpp  OGL_E1.cpp  Scene.cpp  ShadowCubemapRenderer.cpp  ShadowMapRenderer.cpp  Skybox.cpp  SkyboxRenderer.cpp  TransparentRenderer.cpp
example/: 0-ModelRenderer.cpp  01-Engine1Tests.cpp  02-ImGuiTests.cpp  1-HelloWindow.cpp  10-Camera.cpp  11-LightBasics.cpp  11-ModelRenderer.cpp  12-ModelRendererTextured.cpp  12-SimpleLightTypes.cpp  13-LightCasters.cpp  14-MultipleLights.cpp  14-SimpleLightTypes.cpp  15-DepthTesting.cpp  16-StencilTesting.cpp  17-Blending.cpp  18-FaceCulling.cpp  19-Framebuffers.cpp  2-HelloTriangle.cpp  20-Cubemaps.cpp  21-AdvancedGLSL.cpp  22-GeometryShader.cpp  23-Instancing.cpp  24-BlinnPhong.cpp  25-GammaCorrection.cpp  26-ShadowMapping.cpp  27-PointShadow.cpp  28-NormalMapping.cpp  29-ParallaxMapping.cpp  3-HelloRectangle.cpp  30-HDR.cpp  31-Bloom.cpp  32-DeferredShading.cpp  33-SSAO.cpp  34-PBR.cpp  35-Tessellation.cpp  4-TriangleExercise.cpp  5-ShadersBasic.cpp  6-TextureBasics.cpp  7-TextureExercise.cpp  8-Transformations.cpp  (+3 more)
include/: BasicCamera.hpp  BasicLight.hpp  Bloom.hpp  CameraCubemap.hpp  CameraFirstPerson.hpp  CameraFree.hpp  CameraShadowCubemap.hpp  CameraShadowMap.hpp  CameraStatic.hpp  ColorBufferObject.hpp  Cube.hpp  Cubemap.hpp  Descriptor.hpp  DirectionalLight.hpp  ElementBufferObject.hpp  Exception.hpp  FrameBufferObject.hpp  GBuffer.hpp  GLFWInitRAII.hpp  Mesh.hpp  Model.hpp  Object.hpp  Plane.hpp  PointLight.hpp  RenderBufferObject.hpp  RotationOrder.hpp  SSAO.hpp  Shader.hpp  ShadowCubemap.hpp  ShadowMap.hpp  Skybox.hpp  Sphere.hpp  SpotLight.hpp  Texture.hpp  UniformBufferObject.hpp  Utils.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
include/OGL_E1_for_learning_examples/: 16-OGL_E1.hpp  OGL_E1.hpp
include/OGL_E1_for_learning_examples/15-DepthTesting/: OGL_E1.hpp
include/OGL_E1_for_learning_examples/16-StencilTesting/: OGL_E1.hpp
include/OGL_E1_for_learning_examples/17-Blending/: OGL_E1.hpp
include/OGL_E1_for_learning_examples/18-FaceCulling/: OGL_E1.hpp
include/OGL_E1_for_learning_examples/19-Framebuffers/: OGL_E1.hpp
include/OGL_E1_for_learning_examples/20-Cubemaps/: OGL_E1.hpp
include/OGL_E1_for_learning_examples/Utils/: 15-keyboardInputCallback.hpp  callbacks.hpp  factory.hpp  keyboardInputCallback.hpp
levels/: 01-level.json  02-level.json  03-level.json  04-HDR.json  05-gBuffer.json  06-SSAO.json  07-bloomTest.json
materials/OldCopper/: Credits.txt
models/: coloredCube.ply  teapot.ply
models/Axises/: Axises.mtl
models/Backpack/: backpack.mtl
models/BigWoodCrate/: bigWoodCrate.mtl
models/BrickWall/: brickWall.mtl
models/BrickWall/FromBook/: brickWall.mtl
models/BrickWall/Var1/: brickWall.mtl
models/Crate/: crate.mtl
models/Gun/: gun.mtl
models/Planet/Asteroid/: asteroid.mtl
models/Planet/Planet/: planet.mtl
models/Playground/: playground.mtl
models/Shack/: shack.mtl
models/Sphere/: sphere.mtl
models/Window/: window.mtl
models/Window/Новая папка/: window.mtl
models/WoodPlanksPlane/: woodPlanksPlane.mtl
shaders/: 0-normalsRender.frag  0-normalsRender.geom  0-normalsRender.vert  0-renderer.frag  0-renderer.geom  0-renderer.vert  01-coloredShapes.frag  01-coloredShapes.vert  01-playgroundBloomCombine.frag  01-playgroundBloomMipmap.frag  01-playgroundInstances.frag  01-playgroundInstances.vert  01-playgroundLightSourcesRenderer.frag  01-playgroundLightSourcesRenderer.vert  01-playgroundMirror.frag  01-playgroundMirror.vert  01-playgroundObj.frag  01-playgroundObj.vert  01-playgroundShadowCubemapRenderer.frag  01-playgroundShadowCubemapRenderer.geom  01-playgroundShadowCubemapRenderer.vert  01-playgroundShadowMapRenderer.frag  01-playgroundShadowMapRenderer.vert  01-playgroundSkybox.frag  01-playgroundSkybox.vert  01-postprocessing.frag  02-axisRenderer.frag  02-axisRenderer.geom  02-axisRenderer.vert  02-imguiTest.frag  02-imguiTest.vert  1-fragment.frag  1-vertex.txt  10-lightCasters.frag  11-multLightsLamps.frag  11-multLightsLamps.vert  11-multLightsObj.frag  11-multLightsObj.vert  12-depthBufferTest.frag  12-depthBufferVizualizer.frag  (+79 more)
src/: BasicCamera.cpp  BasicLight.cpp  Bloom.cpp  CameraCubemap.cpp  CameraFirstPerson.cpp  CameraFree.cpp  CameraShadowCubemap.cpp  CameraShadowMap.cpp  CameraStatic.cpp  ColorBufferObject.cpp  Cube.cpp  Cubemap.cpp  Descriptor.cpp  DirectionalLight.cpp  ElementBufferObject.cpp  Exception.cpp  FrameBufferObject.cpp  GBuffer.cpp  GLFWInitRAII.cpp  Mesh.cpp  Model.cpp  Object.cpp  Plane.cpp  PointLight.cpp  RenderBufferObject.cpp  SSAO.cpp  Shader.cpp  ShadowCubemap.cpp  ShadowMap.cpp  Skybox.cpp  Sphere.cpp  SpotLight.cpp  Texture.cpp  UniformBufferObject.cpp  Utils.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
(+32 files in other folders)
